--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="EMDSolution" content="" />
 
   <title>Brainwave</title>
 
@@ -77,7 +77,7 @@
           </div>
           <div class="call_btn">
             <a href="">
-              Call: +01234567890
+              Call: +2348107029351
             </a>
           </div>
         </nav>
@@ -694,7 +694,7 @@
               <input type="email" placeholder="Email" />
             </div>
             <div>
-              <input type="text" placeholder="Pone Number" />
+              <input type="text" placeholder="Phone Number" />
             </div>
             <div>
               <input type="text" class="message-box" placeholder="Message" />
@@ -759,19 +759,19 @@
             <div>
               <img src="images/location.png" alt="" />
               <p>
-                104 loram ipusm
+                Lagos
               </p>
             </div>
             <div>
               <img src="images/telephone.png" alt="" />
               <p>
-                ( +01 1234567890 )
+                ( +2348107029351 )
               </p>
             </div>
             <div>
               <img src="images/envelope.png" alt="" />
               <p>
-                demo@gmail.com
+                emdsolutionz@gmail.com
               </p>
             </div>
           </div>
@@ -829,7 +829,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      <a href="https://wa.me/+2348107029351">EMDSolution</a>
     </p>
   </footer>
   <!-- footer section -->
